# JazzEventBackend

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
config/: settings.py  urls.py
content/: admin.py  filters.py  forms.py  models.py  urls.py  views.py
content/migrations/: 0001_initial.py  0002_remove_event_video_file_event_video_and_more.py  0003_alter_lineup_image.py  0004_alter_image_event.py  0005_alter_lineupcomposition_line_up.py  0006_alter_event_line_up.py  0007_alter_image_event_alter_video_event.py  0008_event_is_publicate.py  0009_alter_image_event_alter_video_event.py  0010_alter_image_options.py  0011_alter_event_options.py  0012_alter_event_options_alter_image_options_and_more.py  0013_alter_image_options.py  0014_alter_event_is_publicate_alter_event_priority.py  0015_lineup_price_plus.py
content/servises/: forms_services.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.js
frontend/src/: collage_slider.js  contacts_form.js  event_detail.js  featured_slider.js  filters.js  line_up.js  main.js  photo_slider.js  price_page.js  steps_section.js  style.css  video.js  video_old.js  video_page.js
nginx/: Dockerfile  default.conf
src/: mailing.py
staticfiles/: manifest.json
staticfiles/assets/: contacts-D9Sx-vVG.js  create-element-if-not-defined-CBUcVLZt.js  effect-fade-9imdkYYe.js  event-DqCkjhjI.js  featured_slider-o5aN_si2.js  filters-C1vBV8S0.js  line_up-THbCkimL.js  navigation-B6gs436Z.css  navigation-DnMWVDRv.js  price-UOajkb-n.js  steps_section-VBYb5CQp.js  video-BPBJzhx-.js
templates/: base.html
templates/includes/: footer.html  navbar.html
users/: admin.py  models.py  urls.py
(+34 files in other folders)
